--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   graphic: ^2.2.1
   fl_chart: ^0.66.0
+  multi_select_flutter: ^4.1.3
+  flutter_pdfview: ^1.3.2
 
 dev_dependencies:
   flutter_test:
