--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,12 @@ dependencies:
   fl_chart: ^0.66.0
   multi_select_flutter: ^4.1.3
   flutter_pdfview: ^1.3.2
+  postgres: ^3.1.2
+  provider: ^6.1.2
+  intl: ^0.19.0
+  shared_preferences: ^2.2.2
+  flutter_secure_storage: ^9.0.0
+  convert: ^3.1.1
 
 dev_dependencies:
   flutter_test:
